# pydemuu

./: .gitignore  LICENCE  README.md  example-421.py  pyproject.toml
docs/: pypip-index.md
src/demuu/: __init__.py  model.py
src/demuu/clib/: __init__.py  bench.py  clibdemuu.py  code.py  condition.py  demuu.h  dynamic.py  evaluator.py  function.py  inferer.py  tree.py  valuefct.py  vector.py
src/demuu/clib/Linux-x86_64/: libDemuu.so.0.1.0
tests/: test_01_clib.py  test_11_code.py  test_12_vector.py  test_13_bench.py  test_14_tree.py  test_21_ValueFct.py  test_22_function.py  test_31_condition.py  test_32_dynamic.py  test_32_inferer.py  test_33_evaluator.py  test_51_model.py
tests/models/: simple421.py
